--- a/gvardiya/flat_guard.html
+++ b/gvardiya/flat_guard.html
@@ -15,8 +15,7 @@
             margin: 0 6px!important;
         }
 </style>
-<title>ПРОЕКТНО МОНТАЖНЫЙ ЦЕНТР
-	ВНЕВЕДОМСТВЕННОЙ ОХРАНЫ</title>
+<title>Охрана квартиры в Москве</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=1170">
     <link rel="stylesheet" href="dist/css/normalize.css">
@@ -28,24 +27,14 @@
     <link rel="stylesheet" type="text/css" href="dist/css/main.css">
 </head>
 <body >
-<!-- <div class="preloader-inner" id="preloader">
-    <div class="wrap">
-        <div class="preloader">
-            <div class="one"></div>
-            <p>Loading...</p>
-            <div class="double_bounce1"></div>
-            <div class="double_bounce2"></div>
-        </div>
-    </div>
-</div> -->
 <div class="top-block">
     <div class="container">
                     <ul class="topnav" >
-                <li class="item1"><a href="#homepage">Главная</a></li>
+                <li class="item1"><a href="index.html">Главная</a></li>
                 <li class="item2"><a href="pay_for.html">Оплата</a></li>
-                <li class="item6"><a href="#services">Услуги</a></li>
-                <li class="item3"><a href="#advantages">Преимущества</a></li>
-                <li class="item4"><a href="#how-it-work">Как мы работаем</a></li>
+                <li class="item6"><a href="/index.html#services">Услуги</a></li>
+                <li class="item3"><a href="#sales">Акция</a></li>
+                <li class="item4"><a href="/index.html#how-it-work">Как мы работаем</a></li>
                 <li class="item5" id="topnav"><p  data-menuanchor="contactPage"><a href="#contactPage">Контакты</a></p></li>
             </ul>
                 <div class="top-contact">
@@ -55,7 +44,45 @@
     </div>
 </div>
         <div id="page">
-            <section class="section block-01">
+						<div class="section block-03a" id="section3a">
+                <div class="container">
+                    <div class="page-center">
+                        <h1>Охрана квартиры в Москве</h1>
+                        <ul class="schema clearfix">
+                            <li>
+                                <div class="step">01</div>
+                                <span>Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Речью журчит, имеет, свое рукописи текст составитель вдали однажды ручеек несколько гор вскоре, первую предупреждал дороге толку ее встретил? Злых. </span>
+                            </li>
+                            <li>
+                                <div class="step">02</div>
+                                <span>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Дал своего речью, живет наш языком использовало осталось, проектах переулка образ, пустился текст маленький толку?</span>
+                            </li>
+                            <li>
+                                <div class="step">03</div>
+                                <span>Далеко-далеко за, словесными горами в стране гласных и согласных живут рыбные тексты. Маленький силуэт подзаголовок сих, последний образ парадигматическая лучше до, агентство запятой, себя продолжил? Возвращайся которой курсивных рекламных заголовок там раз вскоре, он однажды единственное! Безопасную он вопроса речью свою страна.</span>
+                            </li>
+                            <li>
+                                <div class="step">04</div>
+                                <span>Далеко-далеко за словесными горами, в стране гласных и согласных живут рыбные тексты. Использовало обеспечивает парадигматическая журчит если страна, мир своих семантика эта свой лучше путь необходимыми до жаренные вдали запятых безопасную. Запятых?</span>
+                            </li>
+                            <li>
+                                <div class="step">05</div>
+                                <span>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Lorem наш грамматики одна путь по всей! Переписывается большой снова правилами жизни ведущими подпоясал эта приставка точках, всемогущая себя прямо пунктуация?</span>
+                            </li>
+                        </ul>
+                        <div class="clearfix">
+                            <!-- <div class="left-box">Все работы выполняются под ключ с
+                                <br/>гарантией отсутствия претензий
+                                <br/>от контролирующих органов
+                            </div> -->
+                            <div class="right-box">
+                                <a href="#consultation" class="btn btn-popup">Получить консультацию</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- <section class="section block-01">
                 <div class="container">
                     <div class="logo ir">Проектно монтажный центр вневедомственной охраны</div>
                     <h1>
@@ -71,8 +98,8 @@
                     </ul>
                     <span class="move-down"></span>
                 </div>
-            </section>
-            <section class="section block-02">
+            </section> -->
+            <!-- <section class="section block-02">
                 <div class="container">
 
                     <div class="inner">
@@ -153,47 +180,39 @@
                     <li>
                         <h4>Охрана квартиры в Москве</h4>
                         <div class="item-image"><img class="img-responsive" src="dist/img/3_1.png" alt=""></div>
-                        <a href="/flat_guard.html">
-													<div class="out">
+                        <div class="out">
                             <h4>Охрана квартиры в Москве</h4>
                             <p>Особенностью данных систем является низкая стоимость оборудования. При срабатывании системы вам придется проверить все помещения в которых расположены датчики подключенные к шлейфу который передал сигнал тревоги.</p>
                             <span class="symbol">S</span>
-													</div>
-												</a>
+                        </div>
                     </li>
 
                     <li>
                         <h4>Охрана частного дома</h4>
-												<div class="item-image"><img class="img-responsive" src="dist/img/3_2.png" alt=""></div>
-                        <a href="/house_guard.html">
+                        <div class="item-image"><img class="img-responsive" src="dist/img/3_2.png" alt=""></div>
                         <div class="out">
                             <h4>Охрана частного дома</h4>
                             <p>Отличие пороговой сигнализации с модульной структурой от сигнализации с радиальными шлейфами состоит в том, что в системе существует возможность подключения однопороговых и двухпороговых шлейфов. Это позволяет передавать сигнал о срабатывании двух и более извещателей.</p>
                             <span class="symbol">S</span>
-												</div>
-												</a>
+                        </div>
                     </li>
                     <li>
                         <h4>Тревожная кнопка</h4>
-												<div class="item-image"><img class="img-responsive" src="dist/img/2_1.png" alt=""></div>
-                        <a href="/push_guard.html">
+                        <div class="item-image"><img class="img-responsive" src="dist/img/2_1.png" alt=""></div>
                         <div class="out">
                             <h4>Тревожная кнопка</h4>
                             <p>Отличие данной системы от пороговой состоит в топологии построения схемы и алгоритмом опроса датчиков. Контрольная панель системы циклически опрашивает подключенные пожарные извещатели с целью выяснить их состояние. В данной системе, извещатель сам принимает решение о пожаре.</p>
                             <span class="symbol">S</span>
-												</div>
-												</a>
+                        </div>
                     </li>
                     <li>
                         <h4>Замена охранно-пожарной системы</h4>
-												<div class="item-image"><img class="img-responsive" src="dist/img/fire.png" alt=""></div>
-                        <a href="/change_guard.html">
+                        <div class="item-image"><img class="img-responsive" src="dist/img/fire.png" alt=""></div>
                         <div class="out">
                             <h4>Замена охранно-пожарной системы</h4>
                             <p>В данной системе извещатель является измерительным устройством и не принимает решения о пожаре. Такой подход позволяет отличить неисправность в электрических цепях извещателя от необходимости профилактических работ. Одно из достоинств данной сигнализации - обрыв адресного шлейфа не влияет на работу системы сигнализации.</p>
                             <span class="symbol">S</span>
-												</div>
-												</a>
+                        </div>
                     </li>
                 </ul>
                 <div class="top-bar">
@@ -249,7 +268,7 @@
                         </ul>
                     </div>
                 </div>
-            </section>
+            </section> -->
 
             <!-- <section class="section block-06">
                 <div style="width: 1px; height: 1px; background: url('dist/img/block-06_motz2.jpg') left top no-repeat "></div>
@@ -273,7 +292,7 @@
                 </div>
 						</section> -->
 
-							<section class="section block06a" id="section06a">
+							<!-- <section class="section block06a" id="section06a">
 								<div class="container">
 										<div class="center-block">
 												<div class="center-block-inner">
@@ -321,9 +340,9 @@
 																				обслуживание</div>
 																	</li>
 																</label>
-														</ul>
+														</ul> -->
 <!-- блоки раскрывающие в группах вопросов - привязка по id="for_item$"-->
-<div class="block06a_answer-modal">
+<!-- <div class="block06a_answer-modal">
 		<input class="block06a_answer-modal-open" id="for_item1" type="checkbox" hidden>
 		<div class="block06a-modal-wrap" aria-hidden="true" role="dialog">
 			<label class="block06a-modal-overlay" for="for_item1"></label>
@@ -603,10 +622,10 @@
 			</div>
 		</div>
 </div>
-
+ -->
 
 <!-- /////////////////////////////////////////////////// -->
-												</div>
+												<!-- </div>
 										</div>
 								</div>
 						</section>
@@ -693,7 +712,7 @@
                         </ul>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <section class="section block-08">
                 <div class="container">
                     <div class="form-inner" id="form-inner">
@@ -809,7 +828,7 @@
 <script type="text/javascript" src="dist/js/jQueryFormStyler/jquery.formstyler.min.js"></script>
 <script type="text/javascript" src="dist/js/slick/slick.min.js"></script>
 <script src="dist/js/owl-carousel/owl.carousel.js"></script>
-<script src="assets/js/main.js"></script>
+<script src="assets/js/flat_guard.js"></script>
 <script>
     function change_slide (slide) {
         $(".item5").removeClass("active");
