--- a/gvardiya/index.html
+++ b/gvardiya/index.html
@@ -153,7 +153,7 @@
                     <li>
                         <h4>Охрана квартиры в Москве</h4>
                         <div class="item-image"><img class="img-responsive" src="dist/img/3_1.png" alt=""></div>
-                        <a href="/flat_guard.html">
+                        <a href="flat_guard.html">
 													<div class="out">
                             <h4>Охрана квартиры в Москве</h4>
                             <p>Особенностью данных систем является низкая стоимость оборудования. При срабатывании системы вам придется проверить все помещения в которых расположены датчики подключенные к шлейфу который передал сигнал тревоги.</p>
@@ -165,7 +165,7 @@
                     <li>
                         <h4>Охрана частного дома</h4>
 												<div class="item-image"><img class="img-responsive" src="dist/img/3_2.png" alt=""></div>
-                        <a href="/house_guard.html">
+                        <a href="house_guard.html">
                         <div class="out">
                             <h4>Охрана частного дома</h4>
                             <p>Отличие пороговой сигнализации с модульной структурой от сигнализации с радиальными шлейфами состоит в том, что в системе существует возможность подключения однопороговых и двухпороговых шлейфов. Это позволяет передавать сигнал о срабатывании двух и более извещателей.</p>
@@ -176,7 +176,7 @@
                     <li>
                         <h4>Тревожная кнопка</h4>
 												<div class="item-image"><img class="img-responsive" src="dist/img/2_1.png" alt=""></div>
-                        <a href="/push_guard.html">
+                        <a href="push_guard.html">
                         <div class="out">
                             <h4>Тревожная кнопка</h4>
                             <p>Отличие данной системы от пороговой состоит в топологии построения схемы и алгоритмом опроса датчиков. Контрольная панель системы циклически опрашивает подключенные пожарные извещатели с целью выяснить их состояние. В данной системе, извещатель сам принимает решение о пожаре.</p>
@@ -187,7 +187,7 @@
                     <li>
                         <h4>Замена охранно-пожарной системы</h4>
 												<div class="item-image"><img class="img-responsive" src="dist/img/fire.png" alt=""></div>
-                        <a href="/change_guard.html">
+                        <a href="change_guard.html">
                         <div class="out">
                             <h4>Замена охранно-пожарной системы</h4>
                             <p>В данной системе извещатель является измерительным устройством и не принимает решения о пожаре. Такой подход позволяет отличить неисправность в электрических цепях извещателя от необходимости профилактических работ. Одно из достоинств данной сигнализации - обрыв адресного шлейфа не влияет на работу системы сигнализации.</p>
