--- a/gvardiya/flat_guard.html
+++ b/gvardiya/flat_guard.html
@@ -27,6 +27,16 @@
     <link rel="stylesheet" type="text/css" href="dist/css/main.css">
 </head>
 <body >
+<div class="preloader-inner" id="preloader">
+		<div class="wrap">
+				<div class="preloader">
+						<div class="one"></div>
+						<p>Loading...</p>
+						<div class="double_bounce1"></div>
+						<div class="double_bounce2"></div>
+				</div>
+		</div>
+</div>
 <div class="top-block">
     <div class="container">
                     <ul class="topnav" >
@@ -192,7 +202,6 @@
 <script type="text/javascript" src="dist/js/jquery.fullPage/jquery.fullPage.min.js"></script>
 <script type="text/javascript" src="dist/js/jQueryFormStyler/jquery.formstyler.min.js"></script>
 <script type="text/javascript" src="dist/js/slick/slick.min.js"></script>
-<script src="dist/js/owl-carousel/owl.carousel.js"></script>
 <script src="assets/js/flat_guard.js"></script>
 <script>
     function change_slide (slide) {
