--- a/gvardiya/index.html
+++ b/gvardiya/index.html
@@ -30,7 +30,7 @@
 
 </head>
 <body >
-<!-- <div class="preloader-inner" id="preloader">
+<div class="preloader-inner" id="preloader">
     <div class="wrap">
         <div class="preloader">
             <div class="one"></div>
@@ -39,7 +39,7 @@
             <div class="double_bounce2"></div>
         </div>
     </div>
-</div> -->
+</div>
 <div class="top-block">
     <div class="container">
                     <ul class="topnav" >
