--- a/gvardiya/index.html
+++ b/gvardiya/index.html
@@ -7,14 +7,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <!--Выносим общие линки и скрипты для всех сайтов-->
 <link rel="icon" href="favicon.ico" type="image/x-icon">
-<style>
-        .top-block .container .topnav{
-            width: 665px!important;
-        }
-        .top-block .container .topnav li{
-            margin: 0 6px!important;
-        }
-</style>
 <title>ПРОЕКТНО МОНТАЖНЫЙ ЦЕНТР
 	ВНЕВЕДОМСТВЕННОЙ ОХРАНЫ</title>
 <meta name="description" content="">
@@ -30,7 +22,7 @@
 		<script src="assets/js/libqrencode-3.9.0_5.min.js"></script>
 </head>
 <body >
-<div class="preloader-inner" id="preloader">
+<!-- <div class="preloader-inner" id="preloader">
     <div class="wrap">
         <div class="preloader">
             <div class="one"></div>
@@ -39,10 +31,10 @@
             <div class="double_bounce2"></div>
         </div>
     </div>
-</div>
+</div> -->
 <div class="top-block">
     <div class="container">
-                    <ul class="topnav" >
+                    <ul class="topnav " >
                 <li class="item1"><a href="#homepage">Главная</a></li>
                 <li class="item2" id="paybarcode"><a href="#payfor" class="payforclass" onclick="recvis.select_rec(this)">Оплата</a></li>
                 <li class="item6"><a href="#services">Услуги</a></li>
@@ -51,7 +43,7 @@
                 <li class="item5" id="topnav"><p  data-menuanchor="contactPage"><a href="#contactPage">Контакты</a></p></li>
             </ul>
                 <div class="top-contact">
-            <div class="phone">8(499)677-67-23</div>
+            <div class="phone">8(495)722-58-45</div>
             <div class="worktime">Круглосуточно без выходных</div>
         </div>
     </div>
@@ -974,7 +966,7 @@
 																<div class="l122">сумма прописью</div>
 															</div>
 															<div class="conteiner-flex">
-																	<div class="l111">Контактные телефоны: 8-495-722-58-45 8-495-961-88-05 </div>
+																	<div class="l111">Контактный телефон: 8-495-722-58-45 </div>
 															</div>
 														</td>
 													</tr>
