--- a/gvardiya/flat_guard.html
+++ b/gvardiya/flat_guard.html
@@ -7,152 +7,73 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <!--Выносим общие линки и скрипты для всех сайтов-->
 <link rel="icon" href="favicon.ico" type="image/x-icon">
-<style>
-        .top-block .container .topnav{
-            width: 665px!important;
-        }
-        .top-block .container .topnav li{
-            margin: 0 6px!important;
-        }
-</style>
 <title>Охрана квартиры в Москве</title>
 <meta name="description" content="">
 <meta name="viewport" content="width=1170">
-    <link rel="stylesheet" href="dist/css/normalize.css">
-		<link rel="stylesheet" href="dist/js/jquery.fancybox/jquery.fancybox.css">
-		<link rel="stylesheet" type="text/css" href="dist/js/jquery.fullPage/jquery.fullPage.css" />
-    <link rel="stylesheet" type="text/css" href="dist/js/jQueryFormStyler/jquery.formstyler.css" />
-    <link rel="stylesheet" type="text/css" href="dist/js/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="dist/js/owl-carousel/owl.carousel.css" />
-    <link rel="stylesheet" type="text/css" href="dist/css/main.css">
+<link rel="stylesheet" href="dist/css/normalize.css">
+<link rel="stylesheet" href="dist/js/jquery.fancybox/jquery.fancybox.css">
+<link rel="stylesheet" type="text/css" href="dist/js/jquery.fullPage/jquery.fullPage.css" />
+<link rel="stylesheet" type="text/css" href="dist/js/jQueryFormStyler/jquery.formstyler.css" />
+<link rel="stylesheet" type="text/css" href="dist/js/owl-carousel/owl.carousel.css" />
+<link rel="stylesheet" type="text/css" href="dist/css/main.css">
 </head>
 <body >
-<div class="preloader-inner" id="preloader">
-		<div class="wrap">
-				<div class="preloader">
-						<div class="one"></div>
-						<p>Loading...</p>
-						<div class="double_bounce1"></div>
-						<div class="double_bounce2"></div>
-				</div>
+<div class="top-block inner-top-block">
+	<div class="container">
+		<ul class="topnav inner-topnav" >
+				<li class="item1"><a href="index.html">Главная</a></li>
+				<li class="item2"><a href="index.html#ekonomiya" >Экономия</a></li>
+				<li class="item3"><a href="index.html#services">Услуги</a></li>
+				<li class="item4"><a href="index.html#garant">Гарантии</a></li>
+				<li class="item5"><a href="index.html#answer-quetion">Вопрос-ответ</a></li>
+				<li class="item6"><a href="index.html#advantages">Преимущества</a></li>
+				<li class="item6"><a href="index.html#how-it-work">Как мы работаем</a></li>
+				<li class="item6"><a href="index.html#sales">Акция</a></li>
+				<li class="item6"><a href="index.html#contactPage">Контакты</a></li>
+		</ul>
+	</div>
+</div>
+<div id="page">
+<section class="section block-01" id="block-01f">
+<div class="container">
+		<div class="logo ir inner-logo">Проектно монтажный центр вневедомственной охраны</div>
+		<div class="inner-block-contact">
+		<div class="top-contact inner-top-contact">
+				<div class="phone">8(495)722-58-45</div>
+				<div class="worktime">Круглосуточно без выходных</div>
 		</div>
+		<a href="#consultation" class="btn btn-popup">Получить консультацию</a>
+	</div>
+		<h1>
+				<span>Охрана квартир в Москве </span>
+		</h1>
+		<div class="inner-content">
+		<p> Далеко-далеко за, словесными горами в стране гласных и согласных живут рыбные тексты. Живет назад языком заглавных! Себя раз парадигматическая проектах имени которой напоивший языком своих залетают переписывается речью о не переулка текстами, сбить дороге жизни реторический текст которое ему, ручеек, по всей ты. Себя продолжил до образ однажды использовало? Оксмокс напоивший он большого. </p>
+		<p> Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Языкового страну предложения одна своих коварных себя пунктуация напоивший? Над парадигматическая продолжил меня напоивший они это вопрос эта домах? Повстречался, оксмокс языкового? Повстречался приставка но его даже живет снова продолжил! </p>
+		<p> Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Пор дорогу языкового что переулка живет власти, продолжил ее знаках собрал проектах, возвращайся вскоре запятой они вершину несколько большого это текстов семантика залетают точках свою, букв буквоград. Последний, маленький ручеек.</p>
+		<a href="index.html">Вернуться на главную</a>
+	</div>
+<div class="footer-inner">
+	<div class="copyright">&copy; <a href="index.html">oxrana.net, 2018</a>
+	</div>
+	<div class="footer-nav">
+		<ul class="topnav inner-topnav" >
+				<li class="item1"><a href="index.html">Главная</a></li>
+				<li class="item2"><a href="index.html#ekonomiya" >Экономия</a></li>
+				<li class="item3"><a href="index.html#services">Услуги</a></li>
+				<li class="item4"><a href="index.html#garant">Гарантии</a></li>
+				<li class="item5"><a href="index.html#answer-quetion">Вопрос-ответ</a></li>
+				<li class="item6"><a href="index.html#advantages">Преимущества</a></li>
+				<li class="item6"><a href="index.html#how-it-work">Как мы работаем</a></li>
+				<li class="item6"><a href="index.html#sales">Акция</a></li>
+				<li class="item6"><a href="index.html#contactPage">Контакты</a></li>
+		</ul>
+	</div>
 </div>
-<div class="top-block">
-    <div class="container">
-                    <ul class="topnav" >
-                <li class="item1"><a href="index.html">Главная</a></li>
-                <li class="item2"><a href="pay_for.html">Оплата</a></li>
-                <li class="item6"><a href="/index.html#services">Услуги</a></li>
-                <li class="item3"><a href="#sales">Акция</a></li>
-                <li class="item4"><a href="/index.html#how-it-work">Как мы работаем</a></li>
-                <li class="item5" id="topnav"><p  data-menuanchor="contactPage"><a href="#contactPage">Контакты</a></p></li>
-            </ul>
-                <div class="top-contact">
-            <div class="phone">8(499)677-67-23</div>
-            <div class="worktime">Круглосуточно без выходных</div>
-        </div>
-    </div>
 </div>
-        <div id="page">
-						<div class="section block-03a" id="section3a">
-                <div class="container">
-                    <div class="page-center">
-                        <h1>Охрана квартиры в Москве</h1>
-                        <ul class="schema clearfix">
-                            <li>
-                                <div class="step">01</div>
-                                <span>Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Речью журчит, имеет, свое рукописи текст составитель вдали однажды ручеек несколько гор вскоре, первую предупреждал дороге толку ее встретил? Злых. </span>
-                            </li>
-                            <li>
-                                <div class="step">02</div>
-                                <span>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Дал своего речью, живет наш языком использовало осталось, проектах переулка образ, пустился текст маленький толку?</span>
-                            </li>
-                            <li>
-                                <div class="step">03</div>
-                                <span>Далеко-далеко за, словесными горами в стране гласных и согласных живут рыбные тексты. Маленький силуэт подзаголовок сих, последний образ парадигматическая лучше до, агентство запятой, себя продолжил? Возвращайся которой курсивных рекламных заголовок там раз вскоре, он однажды единственное! Безопасную он вопроса речью свою страна.</span>
-                            </li>
-                            <li>
-                                <div class="step">04</div>
-                                <span>Далеко-далеко за словесными горами, в стране гласных и согласных живут рыбные тексты. Использовало обеспечивает парадигматическая журчит если страна, мир своих семантика эта свой лучше путь необходимыми до жаренные вдали запятых безопасную. Запятых?</span>
-                            </li>
-                            <li>
-                                <div class="step">05</div>
-                                <span>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Lorem наш грамматики одна путь по всей! Переписывается большой снова правилами жизни ведущими подпоясал эта приставка точках, всемогущая себя прямо пунктуация?</span>
-                            </li>
-                        </ul>
-                        <div class="clearfix">
-                            <div class="right-box">
-                                <a href="#consultation" class="btn btn-popup">Получить консультацию</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-             <section class="section block-08">
-                <div class="container">
-                    <div class="form-inner" id="form-inner">
-												<div id="usermessagea" class="cf_info "></div>
-												<form  class="cform akciya " id="cformsform" >
-													<ol class="cf-ol">
-														<li id="li--1" class="">
-															<label for="cf_field_1">
-																<span></span>
-															</label>
-															<input
-															type="text" name="cf_field_1" id="cf_field_1" class="single" value="" placeholder="Введите Ваше имя" onfocus="clearField(this)" onblur="setField(this)"/>
-															<div class="error-box"></div>
-														</li>
-														<li id="li--2" class="">
-															<label for="cf_field_2">
-																<span></span>
-															</label>
-															<input type="text" name="cf_field_2" id="cf_field_2" class="single" value="" placeholder="Введите Ваш телефон" onfocus="clearField(this)" onblur="setField(this)"/>
-															<div class="error-box"></div>
-														</li>
-														<li id="li--3" class="">
-															<label for="cf_field_3">
-																<span>Выберите тип системы</span>
-															</label>
-															<select name="cf_field_3" id="cf_field_3" class="cformselect" title="">
-																<option value="Выберите тип системы">Выберите тип системы</option>
-																<option value="Пороговая система ">Пороговая система </option>
-																<option value="Адресно-опросная">Адресно-опросная</option>
-																<option value="Адресно-аналоговая">Адресно-аналоговая</option>
-																<option value="Комбинированная система ">Комбинированная система </option>
-															</select>
-														</li>
-														<li class="cf_hidden">
-															<input type="hidden" class="cfhidden" name="cf_field_4" id="cf_field_4" value="" title=""/>
-														</li>
-													</ol>
-												<input type="submit" name="sendbutton" id="sendbutton" class="sendbutton" value="Расчитать стоимость"/>
-													</p>
-												</form>
-                    </div>
-								</div>
 
-                <div class="action">
-                    <h2><span>Внимание</span>Акция</h2>
-                    <div class="text1">Оставьте заявку на расчёт стоимости системы и получите</div>
-                    <div class="text2">месяц бесплатного<br/>обслуживания системы</div>
-                    <div class="text3">даже если вы закажете не у нас</div>
-                </div>
-            </section>
+</section>
 
-            <section class="section block09" data-anchor="contactPage">
-                <div class="container">
-                    <h2>Остались вопросы? Свяжитесь с нами!</h2>
-                    <div class="contact">
-                        <div class="logo"></div>
-                        <ul>
-                            <li class="item1">8 (499) 677-67-23</li>
-                            <li class="item2">(круглосуточно)</li>
-                            <li class="item3">Адрес: г.Москва<br> 3-й Крутицкий переулок, д. 15</li>
-                            <li class="item4">E-mail: info@oxrana.net</li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
 				</div>
 				<div class="popup-wrapper">
 					<div class="popup-thank-you">
@@ -198,30 +119,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="jquery-3.3.1.min.html"><\/script>')</script>
 <script src="dist/js/jquery.fancybox/jquery.fancybox.pack.js"></script>
-<script type="text/javascript" src="dist/js/jquery.slimscroll.min.js"></script>
 <script type="text/javascript" src="dist/js/jquery.fullPage/jquery.fullPage.min.js"></script>
 <script type="text/javascript" src="dist/js/jQueryFormStyler/jquery.formstyler.min.js"></script>
-<script type="text/javascript" src="dist/js/slick/slick.min.js"></script>
-<script src="assets/js/flat_guard.js"></script>
-<script>
-    function change_slide (slide) {
-        $(".item5").removeClass("active");
-        $(".top-contact .phone").removeClass("blackk");
-        $(".item2 a").removeClass("blackk");
-        if (slide == 9 && (2 == 3 || 2 == 4)) {
-            $(".item5").addClass("active");
-        }
-        if ((slide == 6 || slide == 8) && 2 == 4) {
-            $(".top-contact .phone").addClass("blackk");
-        }
-        if (slide == 8 && 2 == 4) {
-            $(".item2 a").addClass("blackk");
-        }
-        if (slide == 6 && 2 == 0) {
-            $(".item5").addClass("active");
-        }
-    }
-</script>
+<script src="assets/js/inner-pages.js"></script>
+
 </body>
 </html>
 
