--- a/gvardiya/index.html
+++ b/gvardiya/index.html
@@ -719,7 +719,7 @@
                     <div class="contact">
                         <div class="logo"></div>
                         <ul>
-                            <li class="item1">8 (499) 677-67-23</li>
+                            <li class="item1">8 (499) 722-58-45</li>
                             <li class="item2">(круглосуточно)</li>
                             <li class="item3">Адрес: г.Москва<br> 3-й Крутицкий переулок, д. 15</li>
                             <li class="item4">E-mail: info@oxrana.net</li>
@@ -795,9 +795,15 @@
 															td:nth-child(2) .conteiner-flex:nth-child(3),td:nth-child(2) .conteiner-flex:nth-child(5),td:nth-child(2) .conteiner-flex:nth-child(7),td:nth-child(2) .conteiner-flex:nth-child(9),td:nth-child(2) .conteiner-flex:nth-child(12){ border-bottom:0; }
 															.l13,.l53,.l43,.l61,.l71,.l81,.l91,.l121{ padding:0 5px; min-width:100px}
 														.l121{height: 60px; }
-															.l11,.l41,.l51{ padding:0 5px; min-width:160px}
-															.l12,.l14,.l52,.l54,.l44{ min-width:160px;}
-															.l42{ min-width:130px;}
+															/* .l11,.l41,.l51{ padding:0 5px; min-width:160px} */
+															.l11,.l41,.l51{ padding:0 5px; min-width:190px}
+
+															/* .l12,.l14,.l52,.l54,.l44{ min-width:160px;} */
+															.l12,.l14,.l52,.l54,.l44{ min-width:130px;}
+
+															/* .l42{ min-width:130px;} */
+															.l42{ min-width:200px;}
+
 															.l21{ width:100%;word-break:break-all;padding:0 5px; }
 															.l61,.l62,.l81,.l82{ border-top:1px solid}
 															.l31,.l41,.l43,.l62,.l72,.l82,.l101,.l111{ padding:0 5px; }
@@ -808,7 +814,9 @@
 															.l92,.l102,.l93,.l103{ width:17%;text-align:center; }
 															.l102,.l103{ border-top:1px solid;}
 															.l111{ width:100%; }
-															.ll2{ height:187px; width: 200px; margin-left: 10px; margin-top:20px }
+															/* .ll2{ height:187px; width: 200px; margin-left: 10px; margin-top:20px } */
+															.ll2{ height:145px; width: 200px; margin-left: 10px; margin-top:20px }
+
 															.l31{width: 100%;border-bottom: 1px solid;}
 															.ll31{text-align: center;}
 															.receipt .first td:nth-child(2),td:nth-child(1){ vertical-align:top; }
@@ -820,7 +828,9 @@
 																	.inline_edit{ background: #def7e1 !important; }
 																.receipt { font-size:.8em; }
 																td:nth-child(2) .conteiner-flex { line-height: 1.5; }
-																.ll2{ min-height:150px; }
+																/* .ll2{ min-height:150px; } */
+																.ll2{ min-height:145px; }
+
 																.added { font-weight: 600; color: #05882d; }
 														}
 														@media print {
@@ -854,7 +864,7 @@
 															<div class="conteiner-flex">
 																<div class="l41">БИК:044525225</div>
 																<div class="l42">Р/С: 40702810238000005227</div>
-																<div class="l43">&nbsp;</div>
+																<!-- <div class="l43">&nbsp;</div> -->
 																<div class="l44">&nbsp;</div>
 															</div>
 															<div class="conteiner-flex">
@@ -927,7 +937,7 @@
 															<div class="conteiner-flex">
 																<div class="l41">БИК:044525225</div>
 																<div class="l42">Р/С: 40702810238000005227</div>
-																<div class="l43">&nbsp;</div>
+																<!-- <div class="l43">&nbsp;</div> -->
 																<div class="l44">&nbsp;</div>
 															</div>
 															<div class="conteiner-flex">
