--- a/gvardiya/flat_guard.html
+++ b/gvardiya/flat_guard.html
@@ -38,10 +38,10 @@
 <div class="container">
 		<div class="logo ir inner-logo">Проектно монтажный центр вневедомственной охраны</div>
 		<div class="logo-text-inner">
-			<h1>
-		ПРОЕКТНО МОНТАЖНЫЙ центр<br>
+		<span>
+		ПРОЕКТНО МОНТАЖНЫЙ ЦЕНТР<br>
 		ВНЕВЕДОМСТВЕННОЙ ОХРАНЫ
-	</h1>
+	</span>
 	</div>
 		<div class="inner-block-contact">
 		<div class="top-contact inner-top-contact">
@@ -50,9 +50,10 @@
 		</div>
 		<!-- <a href="#consultation" class="btn btn-popup">Получить консультацию</a> -->
 	</div>
-		<h2>
-				<a href="/">Главная &gt;</a><span>Охрана квартир в Москве </span>
-		</h2>
+	<div class="inner-block-title">
+			<a href="/">Главная ></a><span>Охрана квартир в Москве </span>
+			<br><br>
+			<h1>Охрана квартир в Москве</h1></div>
 		<div class="inner-content">
 		<p> Далеко-далеко за, словесными горами в стране гласных и согласных живут рыбные тексты. Живет назад языком заглавных! Себя раз парадигматическая проектах имени которой напоивший языком своих залетают переписывается речью о не переулка текстами, сбить дороге жизни реторический текст которое ему, ручеек, по всей ты. Себя продолжил до образ однажды использовало? Оксмокс напоивший он большого. </p>
 		<p> Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Языкового страну предложения одна своих коварных себя пунктуация напоивший? Над парадигматическая продолжил меня напоивший они это вопрос эта домах? Повстречался, оксмокс языкового? Повстречался приставка но его даже живет снова продолжил! </p>
