--- a/gvardiya/index.html
+++ b/gvardiya/index.html
@@ -35,7 +35,7 @@
 <div class="top-block">
     <div class="container">
                     <ul class="topnav " >
-                <li class="item1"><a href="#homepage">Главная</a></li>
+                <li class="item1"><a href="/">Главная</a></li>
 
                 <li class="item6"><a href="#services">Услуги</a></li>
                 <li class="item3"><a href="#advantages">Преимущества</a></li>
@@ -54,7 +54,7 @@
                 <div class="container">
                     <div class="logo ir">Проектно монтажный центр вневедомственной охраны</div>
                     <h1>
-											
+
                         <span class="first">ПРОЕКТНО МОНТАЖНЫЙ центр</span>
 												<span>ВНЕВЕДОМСТВЕННОЙ ОХРАНЫ </span>
 
