--- a/gvardiya/change_guard.html
+++ b/gvardiya/change_guard.html
@@ -34,31 +34,40 @@
 	</div>
 </div>
 <div id="page">
-<section class="section block-01" id="block-01с">
-<div class="container">
-		<div class="logo ir inner-logo">Проектно монтажный центр вневедомственной охраны</div>
-		<div class="inner-block-contact">
-		<div class="top-contact inner-top-contact">
-				<div class="phone">8(495)722-58-45</div>
-				<div class="worktime">Круглосуточно без выходных</div>
-		</div>
-		<a href="#consultation" class="btn btn-popup">Получить консультацию</a>
+		<section class="section block-01" id="block-01f">
+		<div class="container">
+				<div class="logo ir inner-logo">Проектно монтажный центр вневедомственной охраны</div>
+				<div class="logo-text-inner">
+				<span>
+				ПРОЕКТНО МОНТАЖНЫЙ ЦЕНТР<br>
+				ВНЕВЕДОМСТВЕННОЙ ОХРАНЫ
+			</span>
+			</div>
+				<div class="inner-block-contact">
+				<div class="top-contact inner-top-contact">
+						<div class="phone">8(495)722-58-45</div>
+						<div class="worktime">Круглосуточно без выходных</div>
+				</div>
+		<!-- <a href="#consultation" class="btn btn-popup">Получить консультацию</a> -->
 	</div>
-		<h1>
-				<span>Замена охранно-пожарной системы</span>
-		</h1>
+	<div class="inner-block-title">
+			<a href="/">Главная ></a><span>Замена охранно-пожарной системы </span>
+			<br><br>
+			<h1>Замена охранно-пожарной системы</h1></div>
 		<div class="inner-content">
 		<p> Далеко-далеко за, словесными горами в стране гласных и согласных живут рыбные тексты. Живет назад языком заглавных! Себя раз парадигматическая проектах имени которой напоивший языком своих залетают переписывается речью о не переулка текстами, сбить дороге жизни реторический текст которое ему, ручеек, по всей ты. Себя продолжил до образ однажды использовало? Оксмокс напоивший он большого. </p>
 		<p> Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Языкового страну предложения одна своих коварных себя пунктуация напоивший? Над парадигматическая продолжил меня напоивший они это вопрос эта домах? Повстречался, оксмокс языкового? Повстречался приставка но его даже живет снова продолжил! </p>
 		<p> Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Пор дорогу языкового что переулка живет власти, продолжил ее знаках собрал проектах, возвращайся вскоре запятой они вершину несколько большого это текстов семантика залетают точках свою, букв буквоград. Последний, маленький ручеек.</p>
+<div class="prefooter-inner">
 		<a href="index.html">Вернуться на главную</a>
+		<a href="#consultation" class="btn btn-popup">Получить консультацию</a></div>
 	</div>
 <div class="footer-inner">
 	<div class="copyright">&copy; <a href="index.html">oxrana.net, 2018</a>
 	</div>
 	<div class="footer-nav">
 		<ul class="topnav inner-topnav" >
-				<li class="item1"><a href="index.html">Главная</a></li>
+				<li class="item1"><a href="/">Главная</a></li>
 				<li class="item2"><a href="index.html#ekonomiya" >Экономия</a></li>
 				<li class="item3"><a href="index.html#services">Услуги</a></li>
 				<li class="item4"><a href="index.html#garant">Гарантии</a></li>
@@ -125,6 +134,3 @@
 
 </body>
 </html>
-
-
-
