--- a/gvardiya/flat_guard.html
+++ b/gvardiya/flat_guard.html
@@ -59,15 +59,15 @@
 		<p> Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Языкового страну предложения одна своих коварных себя пунктуация напоивший? Над парадигматическая продолжил меня напоивший они это вопрос эта домах? Повстречался, оксмокс языкового? Повстречался приставка но его даже живет снова продолжил! </p>
 		<p> Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Пор дорогу языкового что переулка живет власти, продолжил ее знаках собрал проектах, возвращайся вскоре запятой они вершину несколько большого это текстов семантика залетают точках свою, букв буквоград. Последний, маленький ручеек.</p>
 <div class="prefooter-inner">
-		<a href="index.html">Вернуться на главную</a>
+		<a href="/">Вернуться на главную</a>
 		<a href="#consultation" class="btn btn-popup">Получить консультацию</a></div>
 	</div>
 <div class="footer-inner">
-	<div class="copyright">&copy; <a href="index.html">oxrana.net, 2018</a>
+	<div class="copyright">&copy; <a href="/">oxrana.net, 2018</a>
 	</div>
 	<div class="footer-nav">
 		<ul class="topnav inner-topnav" >
-				<li class="item1"><a href="index.html">Главная</a></li>
+				<li class="item1"><a href="/">Главная</a></li>
 				<li class="item2"><a href="index.html#ekonomiya" >Экономия</a></li>
 				<li class="item3"><a href="index.html#services">Услуги</a></li>
 				<li class="item4"><a href="index.html#garant">Гарантии</a></li>
