--- a/gvardiya/push_guard.html
+++ b/gvardiya/push_guard.html
@@ -34,96 +34,106 @@
 	</div>
 </div>
 <div id="page">
-<section class="section block-01" id="block-01p">
-<div class="container">
-		<div class="logo ir inner-logo">Проектно монтажный центр вневедомственной охраны</div>
-		<div class="inner-block-contact">
-		<div class="top-contact inner-top-contact">
-				<div class="phone">8(495)722-58-45</div>
-				<div class="worktime">Круглосуточно без выходных</div>
+		<section class="section block-01" id="block-01f">
+		<div class="container">
+				<div class="logo ir inner-logo">Проектно монтажный центр вневедомственной охраны</div>
+				<div class="logo-text-inner">
+				<span>
+				ПРОЕКТНО МОНТАЖНЫЙ ЦЕНТР<br>
+				ВНЕВЕДОМСТВЕННОЙ ОХРАНЫ
+			</span>
+			</div>
+				<div class="inner-block-contact">
+				<div class="top-contact inner-top-contact">
+						<div class="phone">8(495)722-58-45</div>
+						<div class="worktime">Круглосуточно без выходных</div>
+				</div>
+				<!-- <a href="#consultation" class="btn btn-popup">Получить консультацию</a> -->
+			</div>
+			<div class="inner-block-title">
+					<a href="/">Главная ></a><span>Тревожная кнопка </span>
+					<br><br>
+					<h1>Тревожная кнопка</h1></div>
+				<div class="inner-content">
+				<p> Далеко-далеко за, словесными горами в стране гласных и согласных живут рыбные тексты. Живет назад языком заглавных! Себя раз парадигматическая проектах имени которой напоивший языком своих залетают переписывается речью о не переулка текстами, сбить дороге жизни реторический текст которое ему, ручеек, по всей ты. Себя продолжил до образ однажды использовало? Оксмокс напоивший он большого. </p>
+				<p> Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Языкового страну предложения одна своих коварных себя пунктуация напоивший? Над парадигматическая продолжил меня напоивший они это вопрос эта домах? Повстречался, оксмокс языкового? Повстречался приставка но его даже живет снова продолжил! </p>
+				<p> Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Пор дорогу языкового что переулка живет власти, продолжил ее знаках собрал проектах, возвращайся вскоре запятой они вершину несколько большого это текстов семантика залетают точках свою, букв буквоград. Последний, маленький ручеек.</p>
+		<div class="prefooter-inner">
+				<a href="/">Вернуться на главную</a>
+				<a href="#consultation" class="btn btn-popup">Получить консультацию</a></div>
+			</div>
+		<div class="footer-inner">
+			<div class="copyright">&copy; <a href="/">oxrana.net, 2018</a>
+			</div>
+			<div class="footer-nav">
+				<ul class="topnav inner-topnav" >
+						<li class="item1"><a href="/">Главная</a></li>
+						<li class="item2"><a href="index.html#ekonomiya" >Экономия</a></li>
+						<li class="item3"><a href="index.html#services">Услуги</a></li>
+						<li class="item4"><a href="index.html#garant">Гарантии</a></li>
+						<li class="item5"><a href="index.html#answer-quetion">Вопрос-ответ</a></li>
+						<li class="item6"><a href="index.html#advantages">Преимущества</a></li>
+						<li class="item6"><a href="index.html#how-it-work">Как мы работаем</a></li>
+						<li class="item6"><a href="index.html#sales">Акция</a></li>
+						<li class="item6"><a href="index.html#contactPage">Контакты</a></li>
+				</ul>
+			</div>
 		</div>
-		<a href="#consultation" class="btn btn-popup">Получить консультацию</a>
-	</div>
-		<h1>
-				<span>Тревожная кнопка</span>
-		</h1>
-		<div class="inner-content">
-		<p> Далеко-далеко за, словесными горами в стране гласных и согласных живут рыбные тексты. Живет назад языком заглавных! Себя раз парадигматическая проектах имени которой напоивший языком своих залетают переписывается речью о не переулка текстами, сбить дороге жизни реторический текст которое ему, ручеек, по всей ты. Себя продолжил до образ однажды использовало? Оксмокс напоивший он большого. </p>
-		<p> Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Языкового страну предложения одна своих коварных себя пунктуация напоивший? Над парадигматическая продолжил меня напоивший они это вопрос эта домах? Повстречался, оксмокс языкового? Повстречался приставка но его даже живет снова продолжил! </p>
-		<p> Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Пор дорогу языкового что переулка живет власти, продолжил ее знаках собрал проектах, возвращайся вскоре запятой они вершину несколько большого это текстов семантика залетают точках свою, букв буквоград. Последний, маленький ручеек.</p>
-		<a href="index.html">Вернуться на главную</a>
-	</div>
-<div class="footer-inner">
-	<div class="copyright">&copy; <a href="index.html">oxrana.net, 2018</a>
-	</div>
-	<div class="footer-nav">
-		<ul class="topnav inner-topnav" >
-				<li class="item1"><a href="index.html">Главная</a></li>
-				<li class="item2"><a href="index.html#ekonomiya" >Экономия</a></li>
-				<li class="item3"><a href="index.html#services">Услуги</a></li>
-				<li class="item4"><a href="index.html#garant">Гарантии</a></li>
-				<li class="item5"><a href="index.html#answer-quetion">Вопрос-ответ</a></li>
-				<li class="item6"><a href="index.html#advantages">Преимущества</a></li>
-				<li class="item6"><a href="index.html#how-it-work">Как мы работаем</a></li>
-				<li class="item6"><a href="index.html#sales">Акция</a></li>
-				<li class="item6"><a href="index.html#contactPage">Контакты</a></li>
-		</ul>
-	</div>
-</div>
-</div>
+		</div>
 
-</section>
+		</section>
 
-				</div>
-				<div class="popup-wrapper">
-					<div class="popup-thank-you">
-						<p>Спасибо.</p>
-						<p>Сообщение отправлено.</p>
-						<div class="close-popup-thank-you"></div>
-					</div>
-				</div>
-        <div class="popup-wrapper-consultation">
-            <div id="consultation">
-                <div class="form-header">Форма заявки на получение консультации</div>
-									<form enctype="multipart/form-data"
-									class="cform konsultacia "
-									id="cforms2form">
-										<ol class="cf-ol">
-											<li id="li-2-1" class="">
-												<label for="cf2_field_1">
-													<span></span>
-												</label>
-												<input type="text" name="cf2_field_1" id="cf2_field_1" class="single" value="" placeholder="Введите Ваше имя" onfocus="clearField(this)" onblur="setField(this)"/>
-												<div class="error-box"></div>
-											</li>
-											<li id="li-2-2" class="">
-												<label for="cf2_field_2">
-													<span></span>
-												</label>
-												<input type="text" name="cf2_field_2" id="cf2_field_2" class="single" value="" placeholder="Введите Ваш телефон" onfocus="clearField(this)" onblur="setField(this)"/>
-												<div class="error-box"></div>
-											</li>
-											<li id="li-2-3" class="">
-												<label for="cf2_field_3">
-													<span>Новое поле</span>
-												</label>
-												<input type="text" name="cf2_field_3" id="cf2_field_3" class="single" value="" title=""/>
-											</li>
-										</ol>
-										<p class="cf-sb">
-											<input type="submit" name="sendbutton2" id="sendbutton2" class="sendbutton" value="Получить консультацию"/>
-										</p>
-									</form>
-            </div>
-        </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="jquery-3.3.1.min.html"><\/script>')</script>
-<script src="dist/js/jquery.fancybox/jquery.fancybox.pack.js"></script>
-<script type="text/javascript" src="dist/js/jquery.fullPage/jquery.fullPage.min.js"></script>
-<script type="text/javascript" src="dist/js/jQueryFormStyler/jquery.formstyler.min.js"></script>
-<script src="assets/js/inner-pages.js"></script>
-</body>
-</html>
+						</div>
+						<div class="popup-wrapper">
+							<div class="popup-thank-you">
+								<p>Спасибо.</p>
+								<p>Сообщение отправлено.</p>
+								<div class="close-popup-thank-you"></div>
+							</div>
+						</div>
+						<div class="popup-wrapper-consultation">
+								<div id="consultation">
+										<div class="form-header">Форма заявки на получение консультации</div>
+											<form enctype="multipart/form-data"
+											class="cform konsultacia "
+											id="cforms2form">
+												<ol class="cf-ol">
+													<li id="li-2-1" class="">
+														<label for="cf2_field_1">
+															<span></span>
+														</label>
+														<input type="text" name="cf2_field_1" id="cf2_field_1" class="single" value="" placeholder="Введите Ваше имя" onfocus="clearField(this)" onblur="setField(this)"/>
+														<div class="error-box"></div>
+													</li>
+													<li id="li-2-2" class="">
+														<label for="cf2_field_2">
+															<span></span>
+														</label>
+														<input type="text" name="cf2_field_2" id="cf2_field_2" class="single" value="" placeholder="Введите Ваш телефон" onfocus="clearField(this)" onblur="setField(this)"/>
+														<div class="error-box"></div>
+													</li>
+													<li id="li-2-3" class="">
+														<label for="cf2_field_3">
+															<span>Новое поле</span>
+														</label>
+														<input type="text" name="cf2_field_3" id="cf2_field_3" class="single" value="" title=""/>
+													</li>
+												</ol>
+												<p class="cf-sb">
+													<input type="submit" name="sendbutton2" id="sendbutton2" class="sendbutton" value="Получить консультацию"/>
+												</p>
+											</form>
+								</div>
+						</div>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<script>window.jQuery || document.write('<script src="jquery-3.3.1.min.html"><\/script>')</script>
+		<script src="dist/js/jquery.fancybox/jquery.fancybox.pack.js"></script>
+		<script type="text/javascript" src="dist/js/jquery.fullPage/jquery.fullPage.min.js"></script>
+		<script type="text/javascript" src="dist/js/jQueryFormStyler/jquery.formstyler.min.js"></script>
+		<script src="assets/js/inner-pages.js"></script>
+
+		</body>
+		</html>
 
 
 
